many more tweaks and bug-squishing

--- a/public/css/my-styles.css
+++ b/public/css/my-styles.css
@@ -108,3 +108,23 @@ li ol, li ul {
 ol ol li:last-child {
     margin-bottom: 0;
 }
+p.more-link {
+    display: block;
+    text-align: right;
+    margin-top: -1em;
+    margin-bottom: 1.5em;
+}
+.intro, .excerpt {
+    font-style: italic;
+    font-size: 0.85em;
+    background: #f5f5f5;
+    padding: 0.25em 0.5em;
+    margin-bottom: 1.5em;
+}
+.intro p, .excerpt p {
+    padding-bottom: 0;
+    margin-bottom: 0;
+}
+* {
+    word-spacing: 1px;
+}
